# static_vector

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: static_vector.h  static_vector.natvis
include/dpm/: static_vector.h  static_vector.natvis
tests/: CMakeLists.txt  compile.cpp  test.cpp
